--- a/styles/html-scss/modules/case-study/_case-study-browser-chrome-util.scss
+++ b/styles/html-scss/modules/case-study/_case-study-browser-chrome-util.scss
@@ -23,7 +23,7 @@
 		height: 11px;
 		top: 8px;
 		left: 10px;
-		z-index: 150;
+		z-index: 100;
 		border-radius: 100%;
 		box-shadow:
 			16px 0 0 rgb(255, 189, 46, 1),
